--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,19 +1,18 @@
-
 /*** Spinner Start ***/
 #spinner {
     opacity: 0;
     visibility: hidden;
     transition: opacity .8s ease-out, visibility 0s linear .5s;
     z-index: 99999;
- }
+}
 
- #spinner.show {
-     transition: opacity .8s ease-out, visibility 0s linear .0s;
-     visibility: visible;
-     opacity: 1;
- }
+#spinner.show {
+    transition: opacity .8s ease-out, visibility 0s linear .0s;
+    visibility: visible;
+    opacity: 1;
+}
 
- .back-to-top {
+.back-to-top {
     position: fixed;
     right: 30px;
     bottom: 30px;
@@ -25,6 +24,7 @@
     transition: 0.5s;
     z-index: 99;
 }
+
 /*** Spinner End ***/
 
 
@@ -77,7 +77,6 @@
 /*** Topbar Start ***/
 .fixed-top {
     transition: 0.5s;
-    background: var(--bs-white);
     border: 0;
 }
 
@@ -114,6 +113,7 @@
 .topbar .top-link a small:hover i {
     color: var(--bs-primary) !important;
 }
+
 /*** Topbar End ***/
 
 /*** Navbar Start ***/
@@ -174,11 +174,12 @@
 #searchModal .modal-content {
     background: rgba(255, 255, 255, .8);
 }
+
 /*** Navbar End ***/
 
 /*** Hero Header ***/
 .hero-header {
-    background: linear-gradient(rgba(248, 223, 173, 0.1), rgba(248, 223, 173, 0.1)), url(../img/hero-img.jpg);
+    /* background: linear-gradient(rgba(248, 223, 173, 0.1), rgba(248, 223, 173, 0.1)), url(../img/hero-img.jpg); */
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -226,6 +227,7 @@
 }
 
 @media (min-width: 992px) {
+
     .hero-header,
     .page-header {
         margin-top: 152px !important;
@@ -233,11 +235,13 @@
 }
 
 @media (max-width: 992px) {
+
     .hero-header,
     .page-header {
         margin-top: 97px !important;
     }
 }
+
 /*** Hero Header end ***/
 
 
@@ -258,18 +262,19 @@
     transform: translate(-50%);
     transform: rotate(45deg);
     background: var(--bs-secondary);
-    
+
 }
+
 /*** featurs End ***/
 
 
 /*** service Start ***/
 .service .service-item .service-content {
     position: relative;
-    width: 250px; 
-    height: 130px; 
-    top: -50%; 
-    left: 50%; 
+    width: 250px;
+    height: 130px;
+    top: -50%;
+    left: 50%;
     transform: translate(-50%, -50%);
 }
 
@@ -282,7 +287,7 @@
 }
 
 .fruite .tab-class .nav-item a.active span {
-    color: var(--bs-white) !important; 
+    color: var(--bs-white) !important;
 }
 
 .fruite .fruite-categorie .fruite-name {
@@ -301,6 +306,7 @@
     height: 100%;
     transition: 0.5s;
 }
+
 .fruite .fruite-item:hover {
     box-shadow: 0 0 55px rgba(0, 0, 0, 0.4);
 }
@@ -318,6 +324,7 @@
 .fruite .fruite-item .fruite-img img:hover {
     transform: scale(1.3);
 }
+
 /*** Fruits End ***/
 
 
@@ -382,6 +389,7 @@
     background: var(--bs-secondary);
     color: var(--bs-white);
 }
+
 /*** vesitable End ***/
 
 
@@ -389,11 +397,13 @@
 .banner .banner-btn:hover {
     background: var(--bs-primary);
 }
+
 /*** Banner Section End ***/
 
 
 /*** Facts Start ***/
 .counter {
+    background: white;
     height: 100%;
     text-align: center;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.05);
@@ -413,6 +423,7 @@
 .counter h1 {
     margin-bottom: 0;
 }
+
 /*** Facts End ***/
 
 
@@ -448,6 +459,7 @@
     background: var(--bs-secondary);
     color: var(--bs-white);
 }
+
 /*** testimonial End ***/
 
 
@@ -455,7 +467,7 @@
 .pagination {
     display: inline-block;
 }
-  
+
 .pagination a {
     color: var(--bs-dark);
     padding: 10px 16px;
@@ -464,18 +476,21 @@
     border: 1px solid var(--bs-secondary);
     margin: 0 4px;
 }
-  
+
 .pagination a.active {
     background-color: var(--bs-primary);
     color: var(--bs-light);
     border: 1px solid var(--bs-secondary);
 }
-  
-.pagination a:hover:not(.active) {background-color: var(--bs-primary)}
+
+.pagination a:hover:not(.active) {
+    background-color: var(--bs-primary)
+}
 
 .nav.nav-tabs .nav-link.active {
     border-bottom: 2px solid var(--bs-secondary) !important;
 }
+
 /*** Single Page End ***/
 
 
@@ -493,5 +508,108 @@
 .footer .footer-item p.mb-4 {
     line-height: 35px;
 }
+
 /*** Footer End ***/
 
+.light {
+    background: white !important;
+    color: black;
+}
+
+.dark {
+    background: black !important;
+    color: white;
+}
+
+.dark .hero-header {
+    background: gray !important;
+}
+
+.light .hero-header {
+    background: linear-gradient(rgba(248, 223, 173, 0.1), rgba(248, 223, 173, 0.1)), url(../img/hero-img.jpg) !important;
+}
+
+.dark .featurs-item {
+    background-color: #27283C !important;
+    color: white !important;
+}
+
+.dark .featurs-item h5 {
+    color: white !important;
+}
+
+.light .featurs-item { 
+    background: #F4F6F8 !important;
+}
+
+.nav-pills > .nav-item > .light {
+    background: #F4F6F8 !important;
+    color: #45595b !important ;
+}
+
+.nav-pills > .nav-item > .dark {
+    background: #27283C !important;
+    color: #9a9c9f !important;
+}
+
+.dark-header {
+    color: white;
+}
+
+.dark > .container > .row .rounded {
+    background: #27283C !important;
+}
+
+.light > .container > .row .rounded {
+    background: #F4F6F8 !important;
+}
+
+.dark > .container > .rounded .rounded{
+    background: #27283C !important;
+}
+
+.dark > .container > .rounded .rounded h1{
+    color: white;
+}
+
+.dark > .container > .row .h5{
+    color: white;
+}
+
+.dark > .container > .row .mb-3{
+    color: white;
+}
+
+
+.dark .fruite-item .rounded-bottom .dark {
+    color: white;
+}
+
+.light .fruite-item .rounded-bottom .light {
+ color: #45595b !important;
+}
+
+
+.dark #carouselId a {
+    color: white;
+}
+
+.dark-header h6 {
+    color: white;
+}
+
+.dark-header h5 {
+    color: white;
+}
+
+.dark-selection {
+    color: black;
+}
+
+.dark-header .shop-header h4 {
+    color: white;
+}  
+
+.dark-descrip p {
+    color: white;
+}
