--- a/public/css/style.css
+++ b/public/css/style.css
@@ -672,3 +672,41 @@
     background: #F4F6F8;
        
 }
+
+.tg {
+    --bg-primary: #207ba1;
+    --text-primary: #207ba1;
+}
+
+.accountDetails {
+    height: 100px;
+    width: 300px;
+    text-align: center;
+    border: 2px solid #81C408;
+    margin: 20px;
+    justify-content: center;
+    align-items: center;
+    column-gap: 50px;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+
+.dark .accountDetails {
+    color: white;
+    
+}
+
+.accountDetails:hover {
+    background-color: #FFB524;
+}
+
+.orderData {
+    width: 100%;
+    height: 50px;
+    background-color: #207ba1;
+}
+
+.orderDetail {
+    background:gainsboro;
+}
